styles.css
:root {
    --header-bg-color: rgb(36, 38, 51);
    --footer-bg-color: rgb(36, 38, 51);
    --sidebar-bg-color: rgb(42, 44, 59);
    --primary-text: rgb(200, 208, 242);
    --red-circle: rgb(236, 103, 101);
    --yellow-circle: rgb(241, 189, 68);
    --green-circle: rgb(18, 219, 119);
    --primary-border: rgb(68, 69, 87);
    --file-focus-color: rgb(49, 52, 69);
    --sidebar-hover-bg: rgb(60, 63, 80);
    --content-bg-color: rgb(49, 52, 69);
    --html-icon-color: rgb(213, 92, 38);
    --alert-bg-color: rgb(55, 53, 53);
    --alert-text-color: rgb(224, 201, 151);
    --file-tab-deselected: rgb(30, 32, 42);
    --dim-text: rgb(100, 108, 142);
    --md-icon-color: rgb(94, 163, 239);
    --accent-color: rgb(169, 141, 198);
    --vim-normal-bg: rgb(237, 214, 208);
    --syntax-green: #a6d189;
    --syntax-red: #e78284;
    --syntax-blue: #8caaee
} /* All colors defined here */

@font-face { /* JetBrains Supremacy */
    font-family: 'JetBrainsMono Nerd Font';
    src: url('fonts/JetBrainsMonoNerdFont-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

body {
    margin: 0; /* The body imposes some amount of margin by default, so we reset it to 0 */
    font-family: JetBrainsMono Nerd Font; /* My favorite font, and now yours too, without questions */
    color: var(--primary-text);
    height: 100vh; /* The body extends all the way down so the sidebar and main content fill all the page */
    display: flex; /* So we can tell main-content to take all the space */
    flex-direction: column; /* Vertical stacking */
    overflow: hidden; /* Makes so the body itself does not scroll when there's an overflow */
}

a {
    color: var(--primary-text);
    text-decoration: underline; /* To hide the default underline of links */
}

#header-div {
    display: flex; /* To stack items horizontally */
    justify-content: space-between; /* To keep both children divs as apart form each other as possible */
    align-items: center; /* To vertically center the items */
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 10px;
    padding-right: 10px;
    background-color: var(--header-bg-color);
    border-bottom: 1px solid var(--primary-border);
}

#header-left {
    display: flex; /* To stack children items horizontally */
    align-items: center; /* To vertically center the items */
    gap: 2px; /* Gap between children items */
}

#header-right {
    display: flex; /* To stack children items horizontally */
    align-items: center; /* To vertically center the items */
    gap: 2px; /* Gap between children items */
}

#header-left h1 {
    font-weight: normal; /* Makes the headings not bold */
    margin: 0px; /* Headings have default margins for some reason */
    margin-left: 10px;
    font-size: 14px;
    line-height: 1; /* To reduce the vertical space around the heading */
}

.red-circle {
    width: 12px;
    height: 12px;
    background-color: var(--red-circle);
    border-radius: 100px; /* Makes it a circle for that MacOS vibe */
    margin-right: 5px;
}

.yellow-circle {
    width: 12px;
    height: 12px;
    background-color: var(--yellow-circle);
    border-radius: 100px; /* Makes it a circle for that MacOS vibe */
    margin-right: 5px;
}

.green-circle {
    width: 12px;
    height: 12px;
    background-color: var(--green-circle);
    border-radius: 100px; /* Makes it a circle for that MacOS vibe */
    margin-right: 5px;
}

#main-content {
    display: flex; /* To stack sidebar and content horizontally */
    flex: 1; /* To extend the main content all the way downward */
    overflow: hidden; /* Makes so the content does not scroll when there's an overflow */
    min-height: 0px; /* The children will overflow without this */
}

#sidebar {
    width: 16.5%;
    background-color: var(--sidebar-bg-color);
    border-right: 1px solid var(--primary-border);
}

@media screen and (max-width: 768px) {
  #sidebar {
      display: none; /* Hide the sidebar when the screen is narrow */
      width: 0%; /* Without this, the sidebar hides, but leaves empty white space, so we just squash it down to 0 width */
  }
}

#content {
    width: 83.5%;
    background-color: var(--content-bg-color);
    display: flex;
    flex-direction: column; /* Stack file tab bar and text area vertically */
    overflow: hidden;
}

@media screen and (max-width: 768px) {
  #content {
      width: 100%; /* Take up the full width of the screen when the sidebar is hidden */
  }
}

#sidebar ul {
    list-style: none; /* To hide the bullet points */
    padding: 0px;
    margin: 0px;
}

#sidebar p {
    padding: 0px;
    margin: 0px;
    font-size: 16px;
}

#sidebar li {
    padding: 2px 20px;
    text-decoration: none;
    margin: 4px 0px; /* For that indentation effect in the folder structure */
    font-size: 16px;
}

#sidebar li:hover {
    background-color: var(--sidebar-hover-bg);
}

#sidebar a {
    text-decoration: none;
}

.nerd-icon {
    padding: 0px 5px;
}

.md-icon {
    color: var(--md-icon-color);
}

.focused {
    background-color: var(--file-focus-color);
}

.alert {
    color: var(--alert-text-color);
    background-color: var(--alert-bg-color);
    border-radius: 5px;
    padding: 5px;
}

#file-tab-bar {
    background-color: var(--header-bg-color);
    color: var(--primary-text);
    display: flex;
    align-items: center;
    border-bottom: 1px solid var(--accent-color);
}

#navigation-arrows {
    border-right: 1px solid var(--primary-border);
    padding: 8px 8px;
}

.file-tab {
    background-color: var(--file-tab-deselected);
    align-self: stretch; /* This stretches the file tab to fill the vertical space of the file tab bar completely */
    display: flex; /* Needed for align-self: stretch */
    align-items: center; /* Vertically centers the file tab content */
    padding: 8px 14px;
    border-right: 1px solid var(--primary-border);
}

.file-tab-focused {
    background-color: var(--content-bg-color);
}

#text {
    padding-top: 25px;
    margin-left: 25px;
    margin-right: 25px;
    font-size: 18px;
    overflow-y: auto; /* So only this text area scrolls */
    flex: 1; /* Takes up all available vertical space */
    outline: none;
}

.dim {
    color: var(--dim-text);
    margin-right: 15px;
}

.dim-inline {
    color: var(--dim-text);
}

#footer-div {
    display: flex; /* To stack items horizontally */
    justify-content: space-between; /* To keep both children divs as apart form each other as possible */
    align-items: center; /* To vertically center the items */
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 10px;
    padding-right: 10px;
    background-color: var(--header-bg-color);
    border-top: 1px solid var(--primary-border);
}

#footer-left {
    display: flex; /* To stack children items horizontally */
    align-items: center; /* To vertically center the items */
    gap: 2px; /* Gap between children items */
}

#footer-right {
    display: flex; /* To stack children items horizontally */
    align-items: center; /* To vertically center the items */
    gap: 10px; /* Gap between children items */
}

#footer-left h1 {
    font-weight: normal; /* Makes the headings not bold */
    margin: 0px; /* Headings have default margins for some reason */
    margin-left: 10px;
    font-size: 14px;
    line-height: 1; /* To reduce the vertical space around the heading */
}

#vim-normal {
    background-color: var(--vim-normal-bg);
    color: var(--footer-bg-color);
    padding: 2px 10px;
    border-radius: 5px;
}

#markdown-text {
    border-right: 1px solid var(--primary-border);
    padding-right: 10px;
    display: flex;
    align-self: stretch;
    align-items: center;
}

.green {
    color: var(--syntax-green);
}

.blue {
    color: var(--syntax-blue);
}

.red {
    color: var(--syntax-red);
}

.content-box {
    border: 2px solid var(--syntax-blue);
    padding: 10px;
}

.bold {
    font-weight: bold;
    display: inline;
}

#text h1 {
    margin: 0px;
    margin-bottom: 25px;
    line-height: 1;
}

#text h2 {
    margin: 0px;
    margin-top: 10px;
    margin-bottom: 25px;
    line-height: 1;
}

.bold-md {
    font-weight: bold;
}

.bold-md::before,
.bold-md::after {
    content: "**";
    color: var(--dim-text);
    font-weight: normal; /* This part injects the '**' into the HTML, which avoids the sheer unreadbility otherwise */
}

#terminal {
    height: 275px;
}

#terminal-tab-bar {
    background-color: var(--header-bg-color);
    border-top: 1px solid var(--primary-border);
    border-bottom: 1px solid var(--primary-border);
    display: flex;
    align-items: center;
}

#terminal-content {
    background-color: var(--content-bg-color);
    padding: 10px;
}

.terminal-tab {
    background-color: var(--content-bg-color);
    align-self: stretch; /* This stretches the file tab to fill the vertical space of the file tab bar completely */
    display: flex; /* Needed for align-self: stretch */
    align-items: center; /* Vertically centers the file tab content */
    padding: 8px 14px;
    border-right: 1px solid var(--primary-border);
}

/* These few classes exist to support the toggleable functionality */
.hidden {
    display: none;
}

.full-width {
    width: 100% !important; /* Override any existing width */
}

@keyframes cursor-blink {
    0% { opacity: 1; }
    50% { opacity: 0; }
    100% { opacity: 1; }
}

.cursor {
    animation: cursor-blink 1s infinite;
}

